2006-08-11  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/preferences/controllers-22.png
	* themes/Default/images/preferences/controllers-22.xcf
	* themes/Default/images/preferences/session-22.png
	* themes/Default/images/preferences/session-22.xcf:
	  fixed a few problems wrt transparency.

2006-08-11  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/preferences/*-22: added a few missing
		preference icons at 22x22px.

2006-08-11  Sven Neumann  <sven@gimp.org>

	* app/actions/error-console-commands.c
	* app/actions/text-editor-commands.c: use gimp_show_message_dialog().

2006-08-11  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.[ch]: introduced a simple message
	dialog to use when there's no progress but a parent widget.

	* app/dialogs/convert-dialog.c
	* app/dialogs/palette-import-dialog.c
	* app/dialogs/preferences-dialog.c
	* app/dialogs/stroke-dialog.c
	* app/tools/gimpimagemaptool.c
	* app/widgets/gimpactionview.c
	* app/widgets/gimpcontrollerlist.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimppdbdialog.c
	* app/widgets/gimpvectorstreeview.c: use the new utility function
	instead of g_message().

2006-08-11  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-message.c (gui_message_error_dialog): use the global
	error dialog if the progress is a GimpProgressDialog.

2006-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.defs: wrap gimp_window_set_transient()
	into a method of GimpDialog.

	* plug-ins/pygimp/gimpfu.py: call dialog.set_transient().

2006-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c: pack the main vbox
	expanding so that the progress bar sticks to the bottom of the
	dialog.

	* plug-ins/pygimp/gimpfu.py: moved blurb label to the top, use
	italic style for it. Add a progress bar unconditionally and use a
	GimpProgressBar for it. Commented out the progress label until it
	is actually used.

2006-08-10  Sven Neumann  <sven@gimp.org>
